2023-05-21  Bruno Haible  <bruno@clisp.org>

	Doc tweaks, borrowed from Gnulib.
	* doc/libunistring.texi (char * strings): Tweak.
	* doc/wchar_t.texi (The wchar_t mess): Reference <wchar.h>. Correct
	statement about AIX.

2023-05-21  Bruno Haible  <bruno@clisp.org>

	Support creating shared libraries on Hurd/x86_64.
	Patch from
	<https://lists.gnu.org/archive/html/bug-hurd/2023-05/msg00086.html>.
	* m4/libtool.m4 (_LT_ENABLE_LOCK): Treat Hurd/x86_64 like
	Linux/x86_64.

2023-04-21  Bruno Haible  <bruno@clisp.org>

	Make sure unicase.h gets a definition of LIBUNISTRING_DLL_VARIABLE.
	* gnulib-local/lib/unicase.in.h.diff: Add a
	'#include <unistring/woe32dll.h>', instead of relying on uninorm.h to
	include it indirectly.

2023-01-29  Bruno Haible  <bruno@clisp.org>

	Fix a bug in the *printf functions.
	Applies gnulib change
	2023-01-28  Bruno Haible  <bruno@clisp.org>
		unistdio/*printf: Fix negative width handling for %U, %lU, %llU.
		* lib/vasnprintf.c (VASNPRINTF): In the code for %U, %lU, %llU,
		test for the FLAG_LEFT bit in the flags variable.
		* tests/unistdio/test-u8-printf1.h (test_xfunction): Add tests
		for width given as argument for the directives %U, %lU, %llU,
		%s, %a, %f, %e, %g.
		* tests/unistdio/test-u16-printf1.h (test_xfunction): Likewise.
		* tests/unistdio/test-u32-printf1.h (test_xfunction): Likewise.
		* tests/unistdio/test-ulc-printf1.h (test_xfunction): Likewise.
	* NEWS: Mention the fix.

2022-09-18  Bruno Haible  <bruno@clisp.org>

	stdbool.mini.h: Improvements for MSVC 14 and Sun C++.
	Applies gnulib changes
	2022-09-04  Bruno Haible  <bruno@clisp.org>
		* stdbool.in.h (_Bool, bool, false, true): In C++ mode with
		MSVC 14, don't define these as macros.
	2022-09-18  Bruno Haible  <bruno@clisp.org>
		* stdbool.in.h (true): Redefine if it does not evaluate to 1 in
		the preprocessor.

2022-07-18  Bruno Haible  <bruno@clisp.org>

	Move gnulib-tool invocation back from autopull.sh to autogen.sh.